--- a/style.css
+++ b/style.css
@@ -78,11 +78,53 @@ body{
     color: #fff;
 }
 
-p{
+p1{
+    margin-bottom: 40px;
+    font-size: 16px;
+    color: white;
+    padding: 0 100px;
+}
+
+p2{
     margin-bottom: 40px;
     font-size: 16px;
     color: #fff;
     padding: 0 100px;
+    width: auto;
+    height: auto;
+}
+p3{
+    margin-bottom: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 0 100px;
+    width: auto;
+    height: auto;
+
+}
+p4{
+    margin-bottom: 40px;
+    font-size: 12px;
+    color: #fff;
+    padding: 0 100px;
+    width: auto;
+    height: auto;
+}
+p5{
+    margin-bottom: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 0 100px;
+    width: auto;
+    height: auto;
+}
+p6{
+    margin-bottom: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 0 100px;
+    width: auto;
+    height: auto;
 }
 
 .btn{
