--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ p1{
     font-size: 16px;
     color: white;
     padding: 0 100px;
+    align-items: center;
 }
 
 p2{
@@ -92,6 +93,7 @@ p2{
     padding: 0 100px;
     width: auto;
     height: auto;
+    align-items: center;
 }
 p3{
     margin-bottom: 40px;
