--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body{
 
 .title{
     margin-bottom: 40px;
-    font-size: 60px;
+    font-size: 40px;
     font-weight: 600;
     text-transform: uppercase;
     color: #fff;
@@ -82,35 +82,33 @@ p1{
     margin-bottom: 40px;
     font-size: 16px;
     color: white;
-    padding: 0 100px;
-    align-items: center;
+    text-align: center;
 }
 
 p2{
     margin-bottom: 40px;
     font-size: 16px;
     color: #fff;
-    padding: 0 100px;
     width: auto;
     height: auto;
-    align-items: center;
+    text-align: center;
 }
 p3{
     margin-bottom: 40px;
     font-size: 16px;
     color: #fff;
-    padding: 0 100px;
     width: auto;
     height: auto;
+    text-align: center;
 
 }
 p4{
     margin-bottom: 40px;
     font-size: 12px;
     color: #fff;
-    padding: 0 100px;
     width: auto;
     height: auto;
+    text-align: center;
 }
 p5{
     margin-bottom: 40px;
@@ -119,6 +117,7 @@ p5{
     padding: 0 100px;
     width: auto;
     height: auto;
+    text-align: center;
 }
 p6{
     margin-bottom: 40px;
@@ -127,6 +126,7 @@ p6{
     padding: 0 100px;
     width: auto;
     height: auto;
+    text-align: center;
 }
 
 .btn{
@@ -164,18 +164,19 @@ p6{
 .sau{
     padding: 30px;
     background: #1f1d1d;
+    height:auto;
 }
 
-.box-container{
+.box-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     text-align: center;
 }
 
-.box-container .box{
-    height: 13rem;
-    width: 17rem;
+.box-container .box {
+    height: 15rem;
+    width: 19rem;
     background: #101010;
     text-align: center;
     border-radius: 1rem;
@@ -202,7 +203,7 @@ s
     color: #4a73ec;
 }
 
-.box-container .box p{
+.box-container .box {
     font-size: 14px;
     padding: 0 5px;
 }
