--- a/style.css
+++ b/style.css
@@ -120,10 +120,10 @@ p5{
     text-align: center;
 }
 p6{
+    margin-top: 2em;
     margin-bottom: 40px;
     font-size: 16px;
     color: #fff;
-    padding: 0 100px;
     width: auto;
     height: auto;
     text-align: center;
