--- a/style.css
+++ b/style.css
@@ -30,7 +30,9 @@ body{
 
 .navbar{
     display: flex;
-    margin-right: 10px;
+    margin-right: 500px;
+    align-items: center;
+
 }
 
 .logo{
@@ -52,6 +54,7 @@ body{
     text-decoration: none;
     text-transform: uppercase;
     font-size: 20px;  
+    text-align: center;
 }
 
 .navbar a:hover{
