--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     align-items: center;
     justify-content: space-between;
     height: 63px;
-    background: #171717;
+    background: #FFF;
     position: fixed;
     width: 100%;
     z-index: 100s;
@@ -41,7 +41,7 @@ body{
 
 .logo a {
     text-decoration: none;
-    color: white;
+    color: black;
     text-transform: uppercase;
     font-size: 20px;
 
@@ -50,7 +50,7 @@ body{
 .navbar a {
     display: block;
     padding: 20px 20px;
-    color: white;
+    color: black;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 20px;  
@@ -207,7 +207,7 @@ s
 .box-container .box h3{
     line-height: 3rem;
     font-size: 20px;
-    color: #4a73ec;
+    color: #000;
 }
 
 .box-container .box {
