--- a/style.css
+++ b/style.css
@@ -43,7 +43,8 @@ body{
     text-decoration: none;
     color: black;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 10px;
+    font-family:"Monaco", 'Courier New', Courier, monospace ;
 
 }
 
@@ -53,8 +54,9 @@ body{
     color: black;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 20px;  
+    font-size: 10px;  
     text-align: center;
+    font-family:"Monaco",'Courier New', Courier, monospace;
 }
 
 .navbar a:hover{
