--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     align-items: center;
     justify-content: space-between;
     height: 63px;
-    background: #FFF;
+    background: #000;
     position: fixed;
     width: 100%;
     z-index: 100s;
@@ -31,7 +31,7 @@ body{
 .navbar{
     display: flex;
     margin-right: 500px;
-    align-items: center;
+    align-items: end;
 
 }
 
@@ -43,7 +43,7 @@ body{
     text-decoration: none;
     color: black;
     text-transform: uppercase;
-    font-size: 10px;
+    font-size: 12px;
     font-family:"Monaco", 'Courier New', Courier, monospace ;
 
 }
@@ -60,7 +60,7 @@ body{
 }
 
 .navbar a:hover{
-    background: #3f3f3f;
+    background: #F3F4F9;
 }
 
 .header {
@@ -80,7 +80,7 @@ body{
     font-size: 40px;
     font-weight: 600;
     
-    color: #fff;
+    color: #000;
     padding: .5em;
 }
 
@@ -171,7 +171,7 @@ p6{
 
 .sau{
     padding: 30px;
-    background: #1f1d1d;
+    background: #FFF;
     height:auto;
 }
 
